Bugfix: Full-Width Layout Broken by CSS Reset Removal

--- a/assets/section-rich-text.css
+++ b/assets/section-rich-text.css
@@ -97,16 +97,16 @@
   .page-width {
     width: 100% ;
     max-width: 100vw ;
-    /* margin-left: 0 ;
+    margin-left: 0 ;
     margin-right: 0 ;
     padding-left: 0 ;
-    padding-right: 0 ; */
+    padding-right: 0 ;
     box-sizing: border-box;
   }
 
-  /* .rich-text__blocks > * {
+  .rich-text__blocks > * {
     margin: 0 !important;
-  } */
+  }
 
   .rich-text__heading {
   font-size: var(--t-h-2-size);
